Fix input date text cut off

--- a/frontend/src/stylesheet/base/form.scss
+++ b/frontend/src/stylesheet/base/form.scss
@@ -5,7 +5,7 @@
 }
 
 .form-main {
-  width: 450px;
+  width: 465px;
 
   h4 {
     margin-top: 5px;
@@ -37,7 +37,7 @@ input[type=text], input[type=password], input[type=number], textarea {
 
 input[type=date] {
   @extend input[type=text];
-  width: 160px;
+  width: 175px;
 }
 input[type=time] {
   @extend input[type=text];
